# atomic_box

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  test.rs
